[project]
name = "py-pcbu"
version = "0.1.7"
description = "A package to interact with the PC Bio Unlock credentials module."
authors = [
    { name = "LM. Garret", email = "lm@codingarret.dev" }
]
dependencies = [
    "py-machineid>=0.6.0",
    "dataclass-wizard>=0.22.3",
    "cryptography>=42.0.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pcbu"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "pyproject.toml",
  "CHANGELOG.md",
  "README.md",
  "LICENSE",
]
exclude = [
  ".vscode",
]